src/test/ui/inference/cannot-infer-closure-circular.stderr
error[E0282]: type annotations needed for `Result<(), E>`
  --> $DIR/cannot-infer-closure-circular.rs:7:14
   |
LL |     let x = |r| {
   |              ^
   |
help: consider giving this closure parameter an explicit type, where the type for type parameter `E` is specified
   |
LL |     let x = |r: Result<(), E>| {
   |               +++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
